<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearNuevaLista">

    <EditText
        android:id="@+id/newListNametextbox"
        android:layout_width="246dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="@string/newListNameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/newListImagebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cambiarfoto"
        android:text="@string/newListImgBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <ImageView
        android:id="@+id/newListImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="cambiarfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        app:srcCompat="@drawable/question_mark" />

    <Button
        android:id="@+id/newListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="crearLista"
        android:text="@string/newListCreateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <TextView
        android:id="@+id/newListTitle"
        android:layout_width="288dp"
        android:layout_height="81dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/paprika"
        android:gravity="center"
        android:text="@string/newListTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>